k8s/bases/elx-docs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elx-docs
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: elx-docs
  type: NodePort
