k8s/bases/elx-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elx-docs
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - docs.elastx.cloud
        - docs.elastx.cloud
      secretName: docs.elastx.cloud
  rules:
    - host: docs.elastx.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elx-docs
                port:
                  name: http
